@@ -576,10 +576,11 @@
 # 171214-2018 - Added PREVIEW_ get_call_launch options
 # 171224-1244 - Added List default_xfer_group override
 # 180105-1543 - Small javascript fixes, and more debug logging, change to 2018
+# 180126-0855 - Added more agent api pause debug output
 #
 
-$version = '2.14-546c';
-$build = '180105-1543';
+$version = '2.14-547c';
+$build = '180126-0855';
 $mel=1;					# Mysql Error Log enabled = 1
 $mysql_log_count=87;
 $one_mysql_log=0;
@@ -5849,10 +5850,11 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 							}
 						if (APIPausE.length > 4)
 							{
-							button_click_log = button_click_log + "" + SQLdate + "-----api_pause---" + APIPausE + "|";
+							var temp_APIPausE_message='';
 							var APIPausE_array = APIPausE.split("!");
 							if (APIPausE_ID == APIPausE_array[1])
 								{
+								temp_APIPausE_message='ALREADY-RECEIVED';
 							//	alert("PAUSE ALREADY RECEIVED");
 								}
 							else
@@ -5865,6 +5867,7 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 										// set to pause on next dispo
 										document.vicidial_form.DispoSelectStop.checked=true;
 									//	alert("Setting dispo to PAUSE");
+										temp_APIPausE_message='PAUSE-DISPO-SET';
 										}
 									else
 										{
@@ -5874,6 +5877,7 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 												{
 												AutoDialWaiting = 0;
 												AutoDial_ReSume_PauSe("VDADpause");
+												temp_APIPausE_message='PAUSE-SET';
 												}
 											VICIDiaL_pause_calling = 1;
 											}
@@ -5883,8 +5887,10 @@ function set_length(SLnumber,SLlength_goal,SLdirection)
 									{
 									AutoDialWaiting = 1;
 									AutoDial_ReSume_PauSe("VDADready");
+									temp_APIPausE_message='RESUME-SET';
 									}
 								}
+							button_click_log = button_click_log + "" + SQLdate + "-----api_pause---" + APIPausE + " " + temp_APIPausE_message + "|";
 							}
 						if ( (APIDiaL.length > 9) && (AllowManualQueueCalls == '0') )
 							{
